<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboController</string>

    <string name="settingsImageDescription">Settings</string>

    <string name="ui_leds_button">LEDs</string>
    <string name="ui_switch_led_1">Switch LED 1</string>
    <string name="ui_switch_led_2">Switch LED 2</string>
    <string name="ui_send_orientation">Send orientation</string>

    <string name="ui_face_button">Face</string>

</resources>