<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonLed1"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_switch_led_1"
        android:textAlignment="center"
        android:padding="10dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonLed2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ui_switch_led_2"
        android:textAlignment="center"
        android:padding="10dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal" />

    <CheckBox
        android:id="@+id/checkboxSendOrientation"
        android:checked="false"
        android:layout_marginTop="20dp"
        android:text="@string/ui_send_orientation"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textOutput1"
        android:background="@android:color/darker_gray"
        android:foreground="@android:color/white"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text=""
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textOutput2"
        android:background="@android:color/darker_gray"
        android:foreground="@android:color/white"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:text=""
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>