<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <org.ros.android.view.RosImageView
        android:id="@+id/imageViewVideo"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/board_background_color" />

    <RelativeLayout
        android:id="@+id/faceButtons"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/scene_buttonFace_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/face_buttons_scene_invisible"/>

        </FrameLayout>

        <Button
            android:id="@+id/buttonFaces"
            style="?buttonBarButtonStyle"
            android:background="@drawable/button_states"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:text="@string/ui_face_button">
        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ledButtons"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/scene_buttonLeds_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/led_buttons_scene_invisible"/>

        </FrameLayout>

        <Button
            android:id="@+id/buttonLeds"
            style="?buttonBarButtonStyle"
            android:background="@drawable/button_states"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:text="@string/ui_leds_button">
        </Button>

    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkboxSendOrientation"
        android:checked="false"
        android:layout_marginTop="140dp"
        android:layout_marginStart="20dp"
        android:text="@string/ui_send_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.robotmitya.robo_controller.VelocityJoystick
        android:id="@+id/velocityJoystick"
        android:layout_alignParentEnd="true"
        android:background="@color/velocity_joystick_enabled_background"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="60dp"
        android:layout_height="match_parent"
        android:layout_width="40dp" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:background="@android:color/darker_gray"
        android:foreground="@android:color/white"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/imageViewVideo"
        android:layout_alignStart="@+id/imageViewVideo"
        android:contentDescription="@string/settingsImageDescription" />

</RelativeLayout>